--- a/modules/cog_utils/locale/fr_FR.po
+++ b/modules/cog_utils/locale/fr_FR.po
@@ -9,16 +9,20 @@ msgstr "Le code doit être unique !"
 msgctxt "error:export_not_found:"
 msgid "Cannot import : no object %s with functionnal key : \"%s\" were found."
 msgstr ""
-"Import impossible: aucun objet %s avec la clé fonctionnelle %s n'a été "
-"trouvé"
+"Impossible d'importer: pas d'objet %s avec la clé fonctionnelle %s n'a été "
+"trouvé."
 
 msgctxt "error:export_not_unique:"
 msgid ""
 "Cannot import : the following objects:\\n%s\\n share the same functional "
 "key:\\n\"%s\"."
 msgstr ""
-"Import impossible: les objets suivants: \\n%s\\n partagent la même clé "
-"fonctionnelle:\\n \"%s\"."
+"Impossible d'importer: les objets suivants:\\n%s\\n partage la même clé "
+"fonctionnelle:\\n\"%s\"."
+
+msgctxt "error:ir.attachment:"
+msgid "Can't decode attachment %s in base 64"
+msgstr "Impossible de décoder la pièce jointe %s en base 64"
 
 msgctxt "error:ir.export.configuration.field:"
 msgid "Field %s is not defined in model %s"
@@ -42,7 +46,7 @@ msgstr "Impossible de charger le jeu d'essai du fichier %s"
 
 msgctxt "error:missing_export_configuration:"
 msgid "Can't find configuration for code %s."
-msgstr "Impossible de trouver une configuration pour le code %s."
+msgstr "Impossible de trouver la configuration avec le code %s."
 
 msgctxt "field:account.account,id:"
 msgid ""
@@ -132,13 +136,13 @@ msgctxt "field:export.export_summary,summary:"
 msgid "Export Summary"
 msgstr "Résumé de l'export"
 
+msgctxt "field:export.fields.select,available_fields:"
+msgid "Available Fields"
+msgstr "Champs disponibles"
+
 msgctxt "field:export.fields.select,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:export.fields.select,possible_fields:"
-msgid "Available Fields"
-msgstr "Champs disponibles"
 
 msgctxt "field:export.fields.select,selected_fields:"
 msgid "Selected Fields"
@@ -149,6 +153,18 @@ msgid "XML Id"
 msgstr "Identifiant XML"
 
 msgctxt "field:ir.action.keyword,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:ir.attachment,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
+
+msgctxt "field:ir.attachment,origin:"
+msgid "Origin"
+msgstr "Origine"
+
+msgctxt "field:ir.attachment,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
@@ -1040,8 +1056,8 @@ msgid "Event"
 msgstr "Evénement"
 
 msgctxt "model:ir.ui.menu,name:menu_export_configuration"
-msgid "Export Configuration"
-msgstr "Configuration de l'export"
+msgid "Configuration"
+msgstr "Configuration"
 
 msgctxt "model:ir.ui.menu,name:menu_export_configuration__model"
 msgid "Model Configurations"
