--- a/modules/contract_cash_value/locale/fr_FR.po
+++ b/modules/contract_cash_value/locale/fr_FR.po
@@ -18,10 +18,6 @@ msgctxt "field:contract.cash_value.collection,amount:"
 msgid "Amount"
 msgstr "Montant"
 
-msgctxt "field:contract.cash_value.collection,collection:"
-msgid "Collection"
-msgstr "Encaissement"
-
 msgctxt "field:contract.cash_value.collection,contract:"
 msgid "Contract"
 msgstr "Contrat"
@@ -94,11 +90,6 @@ msgctxt "field:contract.wizard.collection_to_cash_value.select_date,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt ""
-"field:contract.wizard.collection_to_cash_value.select_date,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.wizard.collection_to_cash_value.select_date,to_date:"
 msgid "To Date"
 msgstr "Date de Fin"
@@ -157,7 +148,7 @@ msgstr "Paramètres de Rachat"
 
 msgctxt "view:contract.wizard.collection_to_cash_value.select_date:"
 msgid "Select Date"
-msgstr ""
+msgstr "Sélectionner la date"
 
 msgctxt "view:contract:"
 msgid "Cash Value Collections"
