--- a/modules/endorsement_party/locale/fr_FR.po
+++ b/modules/endorsement_party/locale/fr_FR.po
@@ -35,9 +35,14 @@ msgid "Addresses Modifications"
 msgstr "Modifications des adresses"
 
 msgctxt "error:endorsement.party:"
+msgid "Health Complement Modifications"
+msgstr "Modifications des informations santé"
+
+msgctxt "error:endorsement.party:"
 msgid ""
 "There may only be one endorsement in_progress at a given time per party"
-msgstr "Il ne peut y avoir qu'un seul avenant en cours de saisie sur un acteur"
+msgstr ""
+"Il ne peut y avoir qu'un seul avenant en cours de saisie sur un acteur"
 
 msgctxt "field:endorsement,parties:"
 msgid "Parties"
@@ -110,6 +115,10 @@ msgstr "Résumé de l'avenant"
 msgctxt "field:endorsement.party,func_key:"
 msgid "Functional Key"
 msgstr "Clé fonctionnelle"
+
+msgctxt "field:endorsement.party,health_complement:"
+msgid "health_complement"
+msgstr "Informations santé"
 
 msgctxt "field:endorsement.party,id:"
 msgid "ID"
@@ -336,6 +345,11 @@ msgctxt "field:endorsement.party.change_birth_date,new_birth_date:"
 msgid "New Birth Date"
 msgstr "Nouvelle date de naissance"
 
+msgctxt ""
+"field:endorsement.party.change_health_complement,current_health_complement:"
+msgid "Current Health Complement"
+msgstr "Complément santé actuel"
+
 msgctxt "field:endorsement.party.change_health_complement,effective_date:"
 msgid "Effective Date"
 msgstr "Date effective"
@@ -352,6 +366,11 @@ msgstr "Avenant unitaire"
 msgctxt "field:endorsement.party.change_health_complement,id:"
 msgid "ID"
 msgstr "ID"
+
+msgctxt ""
+"field:endorsement.party.change_health_complement,new_health_complement:"
+msgid "New Health Complement"
+msgstr "Nouvelle information santé"
 
 msgctxt "field:endorsement.party.change_name,current_birth_name:"
 msgid "Current Birth Name"
@@ -493,6 +512,10 @@ msgctxt "field:endorsement.party.health_complement,func_key:"
 msgid "Functional Key"
 msgstr "Clé fonctionnelle"
 
+msgctxt "field:endorsement.party.health_complement,health_complement:"
+msgid "Health Complement"
+msgstr "Complément Santé"
+
 msgctxt "field:endorsement.party.health_complement,id:"
 msgid "ID"
 msgstr "ID"
@@ -601,6 +624,10 @@ msgctxt "model:endorsement.party.change_birth_date,name:"
 msgid "Change Party Birth Date"
 msgstr "Changement de date de naissance"
 
+msgctxt "model:endorsement.party.change_health_complement,name:"
+msgid "Change Party Health Complement"
+msgstr "Changement des informations santé"
+
 msgctxt "model:endorsement.party.change_name,name:"
 msgid "Change Party Name"
 msgstr "Changement de nom de tiers"
@@ -612,6 +639,14 @@ msgstr "Changement de numéro de sécurité Sociale"
 msgctxt "model:endorsement.party.field,name:"
 msgid "Endorsement Party Field"
 msgstr "Champ d'avenant sur tiers"
+
+msgctxt "model:endorsement.party.health_complement,name:"
+msgid "Endorsement Health Complement"
+msgstr "Avenant de changement des informations de santé"
+
+msgctxt "model:endorsement.party.health_complement.field,name:"
+msgid "Endorsement Health Complement Field"
+msgstr "Champs de l'avenant de changement des informations de santé"
 
 msgctxt "model:ir.action,name:act_endorsement"
 msgid "Endorsement"
