--- a/modules/premium_insurance/locale/fr_FR.po
+++ b/modules/premium_insurance/locale/fr_FR.po
@@ -2,9 +2,25 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:contract.covered_element,premiums:"
+msgid "Premiums"
+msgstr "Primes"
+
 msgctxt "field:contract.option.extra_premium,flat_amount_frequency:"
 msgid "Amount frequency"
 msgstr "Fréquence du montant"
+
+msgctxt "field:contract.option.extra_premium,premiums:"
+msgid "Premiums"
+msgstr "Primes"
+
+msgctxt "field:contract.premium,covered_element:"
+msgid "Covered Element"
+msgstr "Risque Couvert"
+
+msgctxt "field:contract.premium,extra_premium:"
+msgid "Extra Premium"
+msgstr "Surprime"
 
 msgctxt "selection:contract.option.extra_premium,flat_amount_frequency:"
 msgid ""
